--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ kaggle_id: narayananpp # your kaggle id
 keybase_username: # your keybase user name
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
-linkedin_username: Narayanan PP # your LinkedIn user name
+linkedin_username: narayanan-pp-504a10164 # your LinkedIn user name
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 medium_username: # your Medium username
 orcid_id: # your ORCID ID
