--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Narayanan
 middle_name:
-last_name: PP
-email: pnkrishnan27@gmail.com
+last_name: Palghat Parameswaran
+email: npalghat@cs.cmu.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Webpage of Narayanan PP
+  Webpage of Narayanan Palghat Parameswaran
 footer_text: >
 #  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 #  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
